--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format": "prettier --write \"**/*.{js,ts,d.ts}\"",
         "format:check": "prettier --check \"**/*.{js,ts,d.ts}\"",
         "build:lib": "npm run build:check && npm run build:package",
-        "build:package": "BROWSERSLIST_ENV=library ng build primeng-library && gulp build-assets",
+        "build:package": "SET BROWSERSLIST_ENV=library ng build primeng-library && gulp build-assets",
         "build:check": "npm run format:check && npm run security:check",
         "security:check": "npm audit --production --audit-level high",
         "apidoc": "node ./api-generator/build-apidoc.ts",
@@ -40,6 +40,8 @@
         "@angular/platform-browser-dynamic": "^17.3.1",
         "@angular/platform-server": "^17.3.1",
         "@angular/router": "^17.3.1",
+        "@angular/ssr": "^17.3.1",
+        "@docsearch/js": "^3.3.4",
         "@stackblitz/sdk": "1.9.0",
         "@types/express": "^4.17.17",
         "@types/jasmine": "~4.3.1",
@@ -51,6 +53,7 @@
         "codelyzer": "^0.0.28",
         "del": "^7.1.0",
         "domino": "^2.1.6",
+        "esbuild": "^0.19.8",
         "eslint": "^8.39.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "latest",
@@ -72,6 +75,7 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
+        "ng-packager": "^1.0.0",
         "ng-packagr": "^17.2.0",
         "prettier": "2.8.8",
         "primeflex": "^3.3.1",
@@ -84,9 +88,6 @@
         "typedoc": "0.25.4",
         "typescript": "5.2.2",
         "xlsx": "^0.18.5",
-        "zone.js": "~0.14.0",
-        "@angular/ssr": "^17.3.1",
-        "@docsearch/js": "^3.3.4",
-        "esbuild": "^0.19.8"
+        "zone.js": "~0.14.0"
     }
 }
